Implement all commands

--- a/.env
+++ b/.env
@@ -20,4 +20,8 @@ APP_SECRET=fb152e1f6b66377688de4042872db778
 #TRUSTED_HOSTS='^(localhost|example\.com)$'
 ###< symfony/framework-bundle ###
 
-GOOGLE_APPLICATION_CREDENTIALS=/app/.gcloud.json
+GOOGLE_CLOUD_PROJECT=test-project
+GOOGLE_CLOUD_REGION=test-region1
+GOOGLE_APPLICATION_CREDENTIALS=
+FIRESTORE_EMULATOR_HOST=test-firestore:8081
+PUBSUB_EMULATOR_HOST=test-pubsub:8082
