--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     "symfony/dotenv": "5.0.*",
     "symfony/flex": "^1.3.1",
     "symfony/framework-bundle": "5.0.*",
-    "symfony/yaml": "5.0.*"
+    "symfony/yaml": "5.0.*",
+    "ext-json": "*"
   },
   "require-dev": {
     "phpunit/phpunit": "^8.5",
