--- a/composer.json
+++ b/composer.json
@@ -4,20 +4,18 @@
   "license": "proprietary",
   "require": {
     "php": "^7.4",
-    "ext-ctype": "*",
-    "ext-iconv": "*",
+    "ext-json": "*",
     "beberlei/assert": "^3.2",
-    "google/cloud-pubsub": "^1.19",
-    "symfony/console": "5.0.*",
-    "symfony/dotenv": "5.0.*",
-    "symfony/flex": "^1.3.1",
-    "symfony/framework-bundle": "5.0.*",
-    "symfony/yaml": "5.0.*",
-    "ext-json": "*"
+    "google/cloud-firestore": "^1.12",
+    "google/cloud-pubsub": "^1.23",
+    "symfony/console": "^5.0",
+    "symfony/dotenv": "^5.0",
+    "symfony/flex": "^1.6",
+    "symfony/framework-bundle": "^5.0",
+    "symfony/yaml": "^5.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^8.5",
-    "symfony/phpunit-bridge": "^5.0",
+    "phpunit/phpunit": "^9.1",
     "symfony/var-dumper": "5.0.*"
   },
   "config": {
