--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
   php:
     build:
       context: docker/php
-      target: composer
+      target: php
     volumes:
     - ./:/app:delegated
     - ~/.composer/cache:/composer/cache:delegated
