--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -1,26 +1,4 @@
-FROM php:7.4-cli-alpine as php
-
-RUN apk add --no-cache \
-    g++ \
-    curl \
-    git \
-    libzip-dev
-
-RUN docker-php-ext-install \
-    pcntl \
-    posix \
-    zip
-
-RUN apk add --virtual .build-dependencies --no-cache \
-    autoconf \
-    gcc \
-    libc-dev \
-    linux-headers \
-    make \
-    && pecl channel-update pecl.php.net \
-    && pecl install grpc \
-    && docker-php-ext-enable grpc \
-    && apk del .build-dependencies
+FROM eu.gcr.io/real-estate-classifieds/shared/php:7.4 as php
 
 ENV COMPOSER_MEMORY_LIMIT -1
 ENV COMPOSER_ALLOW_SUPERUSER 1
