--- a/composer.json
+++ b/composer.json
@@ -3,29 +3,30 @@
   "type": "project",
   "license": "proprietary",
   "require": {
-    "php": "^7.4",
+    "php": "^8.1",
     "ext-json": "*",
-    "beberlei/assert": "^3.2",
-    "google/cloud-firestore": "^1.12",
-    "google/cloud-pubsub": "^1.23",
-    "symfony/console": "^5.0",
-    "symfony/dotenv": "^5.0",
-    "symfony/flex": "^1.6",
-    "symfony/framework-bundle": "^5.0",
-    "symfony/yaml": "^5.0"
+    "google/cloud-firestore": "^1.20",
+    "google/cloud-pubsub": "^1.34",
+    "symfony/console": "^6.0",
+    "symfony/dotenv": "^6.0",
+    "symfony/flex": "^2.1",
+    "symfony/framework-bundle": "^6.0",
+    "symfony/runtime": "^6.0",
+    "symfony/yaml": "^6.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^9.1",
-    "symfony/var-dumper": "5.0.*"
+    "phpunit/phpunit": "^9.5",
+    "symfony/var-dumper": "^6.0"
   },
   "config": {
     "bin-dir": "bin",
+    "sort-packages": true,
     "preferred-install": {
       "*": "dist"
     },
-    "sort-packages": true,
-    "platform": {
-      "ext-protobuf": "3.11.2"
+    "allow-plugins": {
+      "symfony/flex": true,
+      "symfony/runtime": true
     }
   },
   "autoload": {
@@ -39,13 +40,12 @@
     }
   },
   "replace": {
-    "paragonie/random_compat": "2.*",
     "symfony/polyfill-ctype": "*",
-    "symfony/polyfill-iconv": "*",
-    "symfony/polyfill-php72": "*",
-    "symfony/polyfill-php71": "*",
-    "symfony/polyfill-php70": "*",
-    "symfony/polyfill-php56": "*"
+    "symfony/polyfill-intl-grapheme": "*",
+    "symfony/polyfill-intl-normalizer": "*",
+    "symfony/polyfill-mbstring": "*",
+    "symfony/polyfill-php80": "*",
+    "symfony/polyfill-php81": "*"
   },
   "scripts": {
     "auto-scripts": {
@@ -64,7 +64,7 @@
   "extra": {
     "symfony": {
       "allow-contrib": false,
-      "require": "5.0.*"
+      "require": "^6.0"
     }
   }
 }
