--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,9 +2,7 @@ version: '3.7'
 
 services:
   php:
-    build:
-      context: docker/php
-      target: php
+    image: ghcr.io/pararius/casco-job-interview:latest
     volumes:
     - ./:/app:delegated
     - ~/.composer/cache:/composer/cache:delegated
