--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,27 +2,28 @@ version: '3.7'
 
 services:
   php:
-    image: ghcr.io/pararius/casco-job-interview:latest
+    image: ghcr.io/pararius/office-job-interview:latest
+    environment:
+      COMPOSER_CACHE_DIR: '/app/var/cache/composer'
     volumes:
     - ./:/app:delegated
-    - ~/.composer/cache:/composer/cache:delegated
     networks:
-    - interview
+    - app
 
   pubsub:
     build:
       context: docker/emulator
       target: pubsub
     networks:
-    - interview
+    - app
 
   firestore:
     build:
       context: docker/emulator
       target: firestore
     networks:
-    - interview
+    - app
 
 networks:
-  interview:
-    name: interview
+  app:
+    name: app
