--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -12,6 +12,10 @@ updates:
   schedule:
     day: friday
     interval: weekly
+  groups:
+    dependencies:
+      patterns:
+      - '*'
 
 - package-ecosystem: docker
   directory: /
