--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,13 @@
     "phpunit/phpunit": "^10.5.10",
     "symfony/var-dumper": "^6.1"
   },
+  "replace": {
+    "symfony/polyfill-ctype": "*",
+    "symfony/polyfill-intl-grapheme": "*",
+    "symfony/polyfill-intl-normalizer": "*",
+    "symfony/polyfill-mbstring": "*",
+    "symfony/polyfill-php81": "*"
+  },
   "autoload": {
     "psr-4": {
       "App\\": "src/"
@@ -38,8 +45,6 @@
     "psr-4": {
       "App\\Tests\\": "tests/"
     }
-  },
-  "replace": {
   },
   "scripts": {
     "auto-scripts": {
