--- a/.dockerignore
+++ b/.dockerignore
@@ -1,17 +1,17 @@
-*.cache
-*.log
 .git/
 .github/
+tests/
+var/
+vendor/
 .dockerignore
 .editorconfig
 .env
 .env.*
 .gitignore
-.phpunit.result.cache
 docker-compose.*
 Dockerfile
 Makefile
+overview.png
+overview.excalidraw
 phpunit*
 README.md
-tests/
-vendor
