--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -31,4 +31,5 @@ jobs:
       with:
         context: .
         push: true
+        cache-from: type=gha
         tags: ghcr.io/pararius/office-job-interview:latest
