--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -17,7 +17,5 @@ jobs:
     - uses: actions/checkout@v4
     - run: make install
     - run: make up
-    - run: |
-        docker compose ps
-        make run
+    - run: make run
     - run: make test
